<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_transform">

    <fragment
        android:id="@+id/nav_transform"
        android:name="com.example.myapplication.ui.arithmetic.ArithmeticFragment"
        android:label="@string/menu_transform"
        tools:layout="@layout/fragment_arithmetic" />

    <fragment
        android:id="@+id/nav_review"
        android:name="com.example.myapplication.ui.arithmetic.ReviewFragment"
        android:label="@string/review_title"
        tools:layout="@layout/fragment_review" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.myapplication.ui.arithmetic.HistoryFragment"
        android:label="@string/history_title"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_achievements"
        android:name="com.example.myapplication.ui.arithmetic.AchievementsFragment"
        android:label="@string/achievement_title"
        tools:layout="@layout/fragment_achievements" />
</navigation>